#!/usr/bin/env python3
# .+
# .context    : SRCpy, RAI coded signal (SRC)
# .title      : setup configuration
# .kind       : python script
# .author     : Fabrizio Pollastri <f.pollastri@inrim.it>
# .site       : Revello - Italy
# .creation   : 30-Mar-2021
# .copyright  : (c) 2021 Fabrizio Pollastri
# .license    : GNU Lesser General Public License
# .-

[metadata]
name = srcpy
url = none
author = Fabrizio Pollastri
author_email = f.pollastri@inrim.it
exclude_package_data={'': ['.gitignore']]}

[build_sphinx]
project = 'srcpy'
source-dir = doc
build-dir  = doc/_build
all_files  = 1

[upload_sphinx]
upload-dir = doc/_build/html

#### END
